--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,13 @@ a {
 }
 
 .content {
-  max-width: 1200px; /* Adjust the max width as needed */
+  max-width: 100vw; /* Adjust the max width as needed */
   margin: 0 auto; /* Center the content horizontally */
   padding: 20px; /* Add some padding to the content area */
   z-index: -11;
+  height: 91vh;
+  overflow-y: scroll;
+
 }
 
 .head{
