--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,19 +1,22 @@
 .container {
   background-color: pink;
-  height: 90vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  
 }
 
 .postContainer {
   padding: 20px;
   display: flex;
-  flex-wrap: wrap; /* Allow posts to wrap to the next line */
+  /* flex-wrap: wrap; Allow posts to wrap to the next line */
   gap: 20px;
   justify-content: center;
   align-items: flex-start; /* Adjust alignment as needed */
   max-width: 100%;
+  height: 100%;
 }
 
 .post {
@@ -41,3 +44,34 @@
   overflow: hidden;
   text-overflow: ellipsis; /* Optionally, add ellipsis for long descriptions */
 }
+
+/* For screens up to 768px (typical for mobile devices) */
+@media (max-width: 768px) {
+  .postContainer {
+    margin-left: 0; 
+    flex-wrap: wrap;/* Remove the left margin for better mobile layout */
+  }
+
+  .post {
+    width: 100%; 
+    width: calc(50% - 20px); /* Two posts per row, with some spacing */
+    padding: 10px; /* Increase spacing between posts */
+    box-sizing: border-box;
+    overflow: hidden;
+    /* Make posts occupy the full width of the screen */
+  }
+
+  .imgContainer {
+    width: 100%; /* Make image container full width */
+  }
+
+  .img {
+    height: auto; /* Maintain aspect ratio for images */
+  }
+
+  .desc {
+    margin-left: 0; /* Remove the left margin for better mobile layout */
+  }
+}
+
+/* Add additional media queries for other screen sizes if needed */
