--- a/src/component/header/header.module.css
+++ b/src/component/header/header.module.css
@@ -1,3 +1,36 @@
 .container{
     background-color: aqua;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.topBarCenter{
+    width: 400px;
+    
+}
+.searchBar{
+    width: 100%;
+    height: 30px;
+    background-color: white;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    
+}
+
+.searchIcon{
+    font-size: 20px !important;
+    margin-left: 10px;
+    
+}
+
+.searchInput{
+    border: none;
+    width: 70%;
+    color: black;
+    background-color: white;
+}
+.searchInput:focus{
+    outline : none
 }
