--- a/src/component/navbar/navbar.module.css
+++ b/src/component/navbar/navbar.module.css
@@ -1,3 +1,17 @@
 .container{
     background-color: yellow;
 }
+
+@media (max-width: 768px) {
+     
+    .container{
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        justify-content: space-around;
+        height: 40px;
+    }
+
+
+
+  }
