--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,10 +1,32 @@
 .container {
   background-color: pink;
   min-height: 100vh;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   width: 100%;
+  
+}
+
+.userContainer{
+  display: flex;
+  background-color: yellowgreen;
+  align-items: center;
+  height: 33px;
+  
+}
+
+.userImgContainer{
+  width: 32px;
+    height: 27px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 10px;
+}
+.userImg{
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
   
 }
 
@@ -44,6 +66,7 @@
   overflow: hidden;
   text-overflow: ellipsis; /* Optionally, add ellipsis for long descriptions */
 }
+
 
 /* For screens up to 768px (typical for mobile devices) */
 @media (max-width: 768px) {
